<resources>
    <string name="app_name">LatihanSQLite</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="input_alamat">Input Alamat</string>
    <string name="input_nama">input nama</string>
    <string name="id">ID</string>
    <string name="nama">NAMA</string>
    <string name="alamat">ALAMAT</string>
</resources>