<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/txt_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="number"
       android:visibility="gone"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_nama"/>

    <EditText
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_alamat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>